--- a/index.html
+++ b/index.html
@@ -2,26 +2,35 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>🌤 メンタル天気日記</title>
+  <title>🌤 メンタル天気タブ</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>🌤 メンタル天気日記</h1>
-  <p>今日の気分を天気マークで記録しよう</p>
 
-  <div id="weather-buttons">
-    <button data-weather="☀️">晴れ</button>
-    <button data-weather="⛅">曇り</button>
-    <button data-weather="🌧">雨</button>
-    <button data-weather="⛈">嵐</button>
+  <div class="tabs">
+    <button class="tab-button active" data-tab="input-tab">入力</button>
+    <button class="tab-button" data-tab="calendar-tab">カレンダー</button>
   </div>
 
-  <div id="today-result"></div>
+  <!-- 入力タブ -->
+  <div class="tab-content" id="input-tab">
+    <p>今日の気分を天気マークで記録しよう</p>
+    <div id="weather-buttons">
+      <button data-weather="☀️">晴れ</button>
+      <button data-weather="⛅">曇り</button>
+      <button data-weather="🌧">雨</button>
+      <button data-weather="⛈">嵐</button>
+    </div>
+    <div id="today-result"></div>
+  </div>
 
-  <h2>過去の記録</h2>
-  <ul id="diary-list"></ul>
+  <!-- カレンダータブ -->
+  <div class="tab-content" id="calendar-tab" style="display:none">
+    <h2>カレンダー</h2>
+    <div id="calendar"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
