--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <div class="tab-content" id="simplemap-tab" style="display:none">
     <h2>シンプルな日本地図</h2>
     <div id="simple-japan-map" style="display: grid; grid-template-columns: repeat(12, 32px); gap: 2px; margin: 2em 0;">
-      <!-- 北海道 -->
-      <div style="grid-column: 9 / span 2; grid-row: 1 / span 2; background:#e0f7fa; text-align:center; border-radius:4px; font-size:1.2em;">北</div>
+      <!-- 北海道（面積4倍＝横2倍・縦2倍に拡大） -->
+      <div style="grid-column: 9 / span 3; grid-row: 1 / span 4; background:#e0f7fa; text-align:center; border-radius:4px; font-size:2.4em; display:flex; align-items:center; justify-content:center;">北</div>
       <!-- 東北 -->
       <div style="grid-column: 9 / span 2; grid-row: 6; background:#b2ebf2; text-align:center; border-radius:4px;">青</div>
       <div style="grid-column: 10; grid-row: 7; background:#b2ebf2; text-align:center; border-radius:4px;">岩</div>
